--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 1行目です
 ２行目です
 Pushテスト！
-リモート名はリモートリポジトリを指すURLのニックネームなのか？
+Q.リモート名はリモートリポジトリを指すURLのニックネームなのか？
+A.おそらくそう。`$ git push リモートリポジトリのURL main`でpushできたため。
+Pullテスト！
